--- a/style.css
+++ b/style.css
@@ -25,36 +25,68 @@ nav.main-nav {
 
 }
 
-nav.main-nav .col-sm-6 {
+nav.main-nav .col-md-4,.col-lg-12 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     height: 81px;
 }
 
-@media only screen and (max-width: 600px) {
-    nav.main-nav .col-sm-6 {
-        flex-direction: column;
+nav.main-nav .col figure {
+    margin: 0px;
+}
+
+@media only screen and (max-width: 576px) {
+  
+
+
+}
+
+nav .fa-bars {
+    color: #fff;
+    
+}
+
+
+@media only screen and (max-width: 1200px) {
+    nav.main-nav  {
+       
+        
         height: auto;
-        padding: 5px;
-        justify-content: center;
+        
+        
+    
+    }
+
+  
+
+}
+
+
+@media only screen and (max-width: 576px){
+    nav ul{
+        flex-direction: column;
     }
 }
+
 
 nav figure,
 ul {
     width: 50%;
-
+    margin: 0px;
 }
 
 
 
 nav ul {
     width: 100%;
-    display: inline-block;
+    display: flex;
+    margin: 0px;
+    padding: 0px;
 
 
 }
+
 
 nav ul li {
     list-style-type: none;
@@ -68,19 +100,24 @@ nav ul li a {
     color: #899191;
 }
 
-.carousel-inner {
+.carousel-inner {}
+
+header {
     position: relative;
 }
 
-.jumbotron {
-    padding: 0px;
-
-    top: 50%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    background: transparent;
+header.container {
     position: absolute;
+    top: 0;
     z-index: 10;
+}
+
+.jumb {
+    display: flex;
+    justify-content: space-between;
+    background: transparent;
+
+
     color: #fff;
 
 
@@ -261,6 +298,7 @@ a:hover {
 
 
 /*section work style!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
 .work {
     margin-top: 100px;
     background: #3a454d;
@@ -284,7 +322,7 @@ a:hover {
 
 .work figure img {
     width: 100%;
-    transition:0.3s;
+    transition: 0.3s;
 }
 
 #more {
@@ -319,42 +357,47 @@ a:hover {
     margin: 0px;
     color: rgba(220, 223, 225, 255);
 }
-.work figure{
-    position:relative;
+
+.work figure {
+    position: relative;
     overflow: hidden;
 }
 
-.work figure i{
-    color:#fff;
-    position:absolute;
-    z-index:11;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    display:none;
-}
-.work figure img:hover{
-    transform:scale(1.2);
-    transition:0.5s;
-    
-    
-}
-.work figure .item{
-    position:absolute;
-    bottom:0;
+.work figure i {
     color: #fff;
-    background:#292f36; 
+    position: absolute;
+    z-index: 11;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.work figure img:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+
+
+}
+
+.work figure .item {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    background: #292f36;
     height: 60px;
     padding: 20px;
     width: 360px;
-    display:none;
-    opacity:0.7;
+    display: none;
+    opacity: 0.7;
 }
 
-.work2{
-    margin-bottom:124px;
+.work2 {
+    margin-bottom: 124px;
 }
+
 /*team style##########################################*/
+
 .team .fas,
 .far {
     color: #23b7a4;
