--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ h2 {
     color: #fff;
 }
 
+/*nav style*/
+
 nav.main-nav {
     max-width: 1900px;
     height: 81px;
@@ -25,99 +27,114 @@ nav.main-nav {
 
 }
 
-nav.main-nav .col-md-4,.col-lg-12 {
+nav.main-nav .col-sm-8,
+.col-sm-4 {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     height: 81px;
-}
-
-nav.main-nav .col figure {
-    margin: 0px;
-}
-
-@media only screen and (max-width: 576px) {
-  
-
-
-}
-
-nav .fa-bars {
-    color: #fff;
-    
-}
-
-
-@media only screen and (max-width: 1200px) {
-    nav.main-nav  {
-       
-        
-        height: auto;
-        
-        
-    
-    }
-
-  
 
 }
 
 
-@media only screen and (max-width: 576px){
-    nav ul{
-        flex-direction: column;
-    }
+
+nav.main-nav .col-sm-8 ul {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
+
 
 
 nav figure,
 ul {
-    width: 50%;
+    width: 100%;
     margin: 0px;
+
+}
+
+/*hamburger nav-mobile*/
+
+nav.main-nav .nav-mobile {
+    color: #fff;
+    display: none;
 }
 
 
 
 nav ul {
     width: 100%;
-    display: flex;
-    margin: 0px;
-    padding: 0px;
+
 
 
 }
 
+nav ul li{
+    padding-left: 10px;
+    padding-right: 10px;
+    transition:0.3s;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
-nav ul li {
+nav ul li.active {
     list-style-type: none;
+    height: 28px;
+    border: 1px solid #23b7a4;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius:5px;
+    transition: 0.3s;
+   
+}
+
+nav ul li:hover{
+     list-style-type: none;
+    height: 28px;
+    border: 1px solid grey;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+    border-radius:5px;
+    transition: 0.3s;
+    
 }
 
 nav ul li a {
     font-family: 'Open Sans', sans-serif;
-    margin: 5px;
+   
     font-size: 14px;
     text-decoration: none;
     color: #899191;
+    transition: 0.3s;
+}
+nav ul li a:hover{
+    color: #899191;
 }
 
-.carousel-inner {}
 
-header {
+
+.carousel-inner {
     position: relative;
 }
 
-header.container {
-    position: absolute;
-    top: 0;
-    z-index: 10;
-}
+.jumbotron {
+    padding: 0px;
 
-.jumb {
-    display: flex;
-    justify-content: space-between;
+    top: 50%;
+    left: 35%;
+    transform: translate(-50%, -50%);
     background: transparent;
-
-
+    position: absolute;
+    z-index: 10;
     color: #fff;
 
 
@@ -125,6 +142,7 @@ header.container {
 
 .jumbotron h1 {
     font-size: 36px;
+    padding: 28px;
 }
 
 .jumbotron p {
