--- a/style.css
+++ b/style.css
@@ -209,10 +209,11 @@ nav ul li a:hover{
 }
 
 .content p {
+    margin-left:0px;
     font-size: 16px;
 }
 
-.green-content {
+.green-content {display:block;
     width: 50px;
     height: 50px;
     background: #23b7a4;
