--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ a:hover {
     background: #292f36;
     height: 60px;
     padding: 20px;
-    width: 360px;
+    width: 100%;
     display: none;
     opacity: 0.7;
 }
@@ -503,10 +503,9 @@ footer form label{
     color: #fff;
 }
 
-.author .col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.author #author-fa{
+    text-align: center;
 }
 
 .author a {
